Fix arrow left z-index

--- a/react/global.css
+++ b/react/global.css
@@ -18,7 +18,7 @@
 }
 .vtex-shelf .vtex-shelf__arrow-left
 {
-    z-index: 999;
+    z-index: 1;
 }
 .vtex-shelf .vtex-shelf__arrow-right
 {
